--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,8 +14,8 @@ h1 {
 }
 
 img {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: auto;
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px grey;
